Closed Bug 1759785 Opened 4 years ago Closed 4 years ago

Intercept crashy GTK messages that we don't have visibility into.

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox101 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

See comments and blocked bug.

This should get us crash reports for Wayland errors that otherwise we're
blind to, see comments.

Some of those might be expected / not our fault (if the Wayland
compositor crashes altogether for example), but in that case we're
unlikely to even be able to pop up the crash reporter window.

Worst case we can always revert this I guess.

See Also: → 1455113, 1682402

This probably needs changes as per bug 1682402. Will try to get to it.

Flags: needinfo?(emilio)

I confirmed that this works locally, so let's get it landed.

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/62b17c4f79ae Intercept crashy GTK messages that we don't have visibility into. r=stransky
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
See Also: → 1776263
Depends on: 1859267
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: