Bug 1759785 - Intercept crashy GTK messages that we don't have visibility into. r=stransky

This should get us crash reports for Wayland errors that otherwise we're
blind to, see comments.

Some of those might be expected / not our fault (if the Wayland
compositor crashes altogether for example), but in that case we're
unlikely to even be able to pop up the crash reporter window.

Worst case we can always revert this I guess.

Differential Revision: https://phabricator.services.mozilla.com/D141173